# migrar_mysql_mongo

./: .env  .env.example  .gitignore  Cargo.toml  migrated_ids.txt
docs/: apuntes.txt
src/: configuration.rs  main.rs
src/models/: documento.rs  mod.rs
src/services/: migrar.rs  migrar_date.rs  migrar_lote.rs  migrar_size_date.rs  migrar_test.rs  mod.rs
src/utils/: mod.rs  operation.rs  write_file.rs
