[package]
name = "migrar_mysql_mongo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mysql = "23.0.1"
mongodb = "2.5.0"
dialoguer=  "0.10.4"
indicatif = "0.17.3"
base64 = "0.21.0"
config = "0.13.3"
dotenv = "0.15.0"
